--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -4,7 +4,8 @@
 
     width: 100%;
     height: 10vh;
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.829);
+    position: fixed;
 
     .container {
 
@@ -18,13 +19,37 @@
 
             width: 20%;
             height: 100%;
-            background-color: green;
+            border: 1px solid black;
+            
+            img {
+                width: 100%;
+                height: 100%;
+            }
 
         }
         .nav {
-            width: 70%;
+            width: 60%;
             height: 100%;
-            background-color: yellow;
+            background-color: rgb(0, 4, 255);
+            display: flex;
+
+            ul {
+
+                display: flex;
+                width: 60%;
+                align-items: flex-end;
+                margin-left: 30%;
+
+                li {
+
+                    padding: 15px;
+                    margin-left: 15px;
+                    text-align: right;
+                    list-style: none;
+                }
+
+            }
+
         }
         .btn-agendar {
             width: 10%;
