--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -30,7 +30,6 @@
         .nav {
             width: 60%;
             height: 100%;
-            background-color: rgb(0, 4, 255);
             display: flex;
 
             ul {
@@ -41,11 +40,15 @@
                 margin-left: 30%;
 
                 li {
-
                     padding: 15px;
                     margin-left: 15px;
                     text-align: right;
                     list-style: none;
+                    cursor: pointer;
+                }
+                li:hover {
+                    font-weight: bold;
+                    transition: .4s ease-in-out;
                 }
 
             }
