--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -4,12 +4,11 @@
 
     width: 100%;
     height: 10vh;
-    background-color: rgba(255, 255, 255, 0.829);
+    background-color: rgb(255, 255, 255);
     position: fixed;
 
     .container {
 
-        background-color: red;
         width: 90%;
         height: 90%;
         margin: auto;
@@ -19,7 +18,6 @@
 
             width: 20%;
             height: 100%;
-            border: 1px solid black;
             
             img {
                 width: 100%;
@@ -35,9 +33,10 @@
             ul {
 
                 display: flex;
-                width: 60%;
+                width: 65%;
                 align-items: flex-end;
                 margin-left: 30%;
+                border-right: 1px solid black;
 
                 li {
                     padding: 15px;
@@ -57,7 +56,19 @@
         .btn-agendar {
             width: 10%;
             height: 100%;
-            background-color: violet;
+
+            .btn {
+                width: 100%;
+                height: 60%;
+                cursor: pointer;
+                background-color: rgb(30, 111, 216);
+                color: white;
+                font-weight: bold;
+                border: none;
+                border-radius: 15px;
+                margin-top: 2vh;
+
+            }
         }
     }
 
