--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -4,8 +4,9 @@
 
     width: 100%;
     height: 10vh;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.89);
     position: fixed;
+    z-index: 997;
 
     .container {
 
