--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -4,24 +4,63 @@
 
     width: 100%;
     height: 100vh;
-    background-color: rgba(41, 116, 187, 0.89);
+    background-color: #f2f5fa;
+
+    h2 {
+
+        text-align: left;
+        margin-left: 23vh;
+        font-size: 35px;
+        margin-top: 10vh;
+    }
 
     .container {
         width: 80%;
-        height: 100%;
+        height: 70vh;
         margin: auto;
-        background-color: pink;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
 
         .box {
-
             width: 25%;
-            height: 25%;
+            height: 43%;
             padding: 15px;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.664);
+            border: .2px solid rgba(112, 109, 109, 0.274);
+            border-radius: 10px;
+            cursor: pointer;
             margin: auto;
+
+            .circle {
+
+                width: 30%;
+                height: 30%;
+                border-radius: 50%;
+                margin-left: 35%;
+                margin-top: 2vh;
+                background-color: rgb(147, 147, 192);
+
+                img {
+                    margin-top: 2vh;
+                    width: 50px;
+                }
+            }
+
+            h2 {
+
+                margin-top: 2vh;
+                margin-left: 0%;
+                text-align: center;
+                font-size: 25px;
+            }
+            h3 {
+                font-weight: 200;
+            }
+        }
+        .box:hover {
+            transition: .2s ease-in-out;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
         }
     }
 }
