--- a/src/componentes/tratamentos/tratamentos.scss
+++ b/src/componentes/tratamentos/tratamentos.scss
@@ -5,12 +5,18 @@
     width: 100%;
     height: 70vh;
     margin-top: 10vh;
-    background-color: yellow;
+
+    h2 {
+
+        text-align: left;
+        margin-left: 28vh;
+        font-size: 35px;
+        margin-top: 10vh;
+    }
 
     .container {
         width: 80%;
         height: 80%;
-        background-color: grey;
         margin: auto;
         display: flex;
         flex-wrap: wrap;
@@ -19,9 +25,30 @@
         .box {
             width: 35%;
             height: 40%;
-            background-color: orangered;
+
             padding: 15px;
             margin: auto;
+
+            .fa-icon {
+                margin-top: 2vh;
+                background-color: rgba(0, 0, 255, 0.247);
+                height: 2vh;
+                width: 3vh;
+            }
+
+            .titulo {
+                display: flex;
+
+                h3 {
+                    margin-left: 1vh;
+                    font-weight: bold;
+                }
+            }
+
+            h3 {
+                text-align: left;
+                font-weight: 300;
+            }
         }
     }
 }
