--- a/src/componentes/tratamentos/tratamentos.scss
+++ b/src/componentes/tratamentos/tratamentos.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 70vh;
     margin-top: 10vh;
-
+    
     h2 {
 
         text-align: left;
@@ -20,6 +20,8 @@
         margin: auto;
         display: flex;
         flex-wrap: wrap;
+        border-bottom: 1px solid black;
+
         justify-content: space-between;
 
         .box {
