--- a/src/componentes/folder/folder.scss
+++ b/src/componentes/folder/folder.scss
@@ -4,14 +4,64 @@
 
     width: 100%;
     height: 50vh;
-    background-color: black;
 
     .container {
-        width: 80%;
-        height: 30vh;
+        width: 60%;
+        height: 35vh;
         position: absolute;
-        margin-left: 10%;
-        margin-top: 10vh;
-        background-color: yellow;
+        margin-left: 20%;
+        margin-top: 0vh;
+        background-color: #007fe6;
+        border-radius: 15px;
+        display: flex;
+
+        .col-8 {
+
+            width: 60%;
+            height: 100%;
+            
+
+            h2 {
+                width: 60%;
+                text-align: left;
+                margin-left: 20%;
+                margin-top: 7vh;
+                color: white;
+                font-size: 30px;
+            }
+            h3 {
+                margin-left: 20%;
+                text-align: left;
+                width: 70%;
+                margin-top: 0vh;
+                font-weight: 300;
+                color: white;
+            }
+
+            .btn-secundary {
+                width: 23%;
+                height: 4vh;
+                border: none;
+                color: black;
+                border-radius: 5px;
+                margin-left: -25vh;
+                background-color: #f4f6f7;
+                font-weight: 100;
+                font-size: 16px;
+                cursor: pointer;
+            }
+        }
+        .col-4 {
+
+            width: 40%;
+            height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 15px;
+            }
+        }
+
     }
 }
