--- a/src/componentes/clientes/clientes.scss
+++ b/src/componentes/clientes/clientes.scss
@@ -4,5 +4,62 @@
 
     width: 100%;
     height: 100vh;
-    background-color: rgb(75, 64, 64);
+
+    h2 {
+
+        text-align: left;
+        margin-left: 17vh;
+        font-size: 35px;
+        margin-top: 10vh;
+    }
+
+    .container {
+        width: 90%;
+        height: 50vh;
+        margin: auto;
+        margin-top: 5vh;
+        
+
+        .box {
+            width: 95%;
+            height: 40vh;
+            margin-bottom: 5vh;
+            border-radius: 15px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            background-color: white;
+            cursor: pointer;
+
+            h2 {
+                position: absolute;
+                font-size: 85px;
+                margin-top: 0vh;
+                margin-left: 2vh;
+            }
+
+            .text {
+                width: 80%;
+                margin: auto;
+                margin-top: 15%;
+                
+                h3 {
+                    line-height: 35px;
+                    font-weight: 200;
+                    text-align: left;
+                }
+            }
+
+            .imagem {
+
+                width: 100px;
+                height: 100px;
+                background-color: rgba(0, 255, 13, 0.527);
+                margin-left: 5vh;
+                border-radius: 50%;
+            }
+        }
+        .box:hover {
+
+            box-shadow: rgba(50, 50, 93, 0.616) 0px 13px 27px -5px, rgba(14, 187, 173, 0.575) 0px 8px 16px -8px;
+        }
+    }
 }
