--- a/src/componentes/slider/slider.scss
+++ b/src/componentes/slider/slider.scss
@@ -65,7 +65,7 @@
             img {
                 width:100%;
                 height: 100%;
-                border-radius: 55px;
+                border-bottom-left-radius: 60px;
             }
         }
     }
