--- a/src/componentes/footer/footer.scss
+++ b/src/componentes/footer/footer.scss
@@ -3,5 +3,54 @@
 
     width: 100%;
     height: 30vh;
-    background-color: red;
+    background-color: white;
+
+    .container {
+        width: 90%;
+        height: 80%;
+
+        margin: auto;
+        display: flex;
+
+        .col-sm {
+            width: 25%;
+            height: 80%;
+            margin-top: 7vh;
+            background-color: white;
+            border-right: .6px solid rgba(0, 0, 0, 0.521);
+
+            img {
+                width: 80%;
+                margin-top: 2vh;
+            }
+            h2 {
+                text-align: left;
+                margin-left: 3.5vh;
+            }
+            h3 {
+                text-align: left;
+                padding: 15px;
+                font-weight: 200;
+                margin-top: 3vh;
+                margin-left: 2vh;
+            }
+            li {
+                list-style: none;
+                margin-top: 1vh;
+                text-align: left;
+            }
+
+        }
+        .right {
+            border-right: none;
+            
+
+            img {
+                margin-top: 7vh;
+                width: 50px;
+                margin-left: 5vh;
+            }
+
+        }
+    }
 }
