refactor: responsivo slider

--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -85,9 +85,11 @@
 @media (max-width: 768px) {
 
     .navbar {
-
+            background-color: black;
+            width: 80%;
         .container {
 
+            margin-left: -15vh;
 
             .col-logo {
 
