--- a/src/componentes/slider/slider.scss
+++ b/src/componentes/slider/slider.scss
@@ -70,3 +70,86 @@
         }
     }
 }
+
+@media (max-width: 1440px) {
+
+    .slider {
+
+        .container {
+
+            .col-6 {
+    
+                .btn-intro {
+                    margin-left: 17vh;
+
+                }
+            }
+        }
+    }
+    
+}
+
+@media (max-width: 1024px) {
+
+    .slider {
+
+        .container {
+ 
+            .col-6 {
+                .btn-intro {
+                    margin-left: 5vh;
+                }
+                h3 {
+                    margin-left: 5vh;
+                    margin-top: 22vh;
+                }
+                h2 {
+                    margin-left: 5vh;
+                    width: 80%;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (max-width: 768px) {
+    .slider {
+        height: auto;
+
+        .container {
+            width: 100%;
+            margin-left: 0vh;
+            display: inline-block;
+
+            .col-6 {
+                width: 100%;
+                margin-bottom: 5vh;
+
+                h3 {
+                    margin-top: 10vh;
+
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 550px) {
+
+    .slider {
+        height: auto;
+
+        .container {
+            width: 100%;
+            margin-left: 0vh;
+            display: inline-block;
+
+            .col-6 {
+                width: 100%;
+                margin-bottom: 5vh;
+               
+            }
+        }
+    }
+}
