--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -64,3 +64,121 @@
         }
     }
 }
+
+@media (max-width: 1440px) {
+    .cards {
+        h2 {
+            margin-left: 17vh;
+        }
+    
+        .container {
+           
+            .box {
+                height: 35vh;
+                margin-top: 3vh;
+            }
+        
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .cards {
+        h2 {
+            margin-left: 17vh;
+        }
+    
+        .container {
+           
+            .box {
+                height: 40vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 22%;
+                    width: 35%;
+                }
+            }
+        
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .cards {
+        h2 {
+            margin-left: 10vh;
+        }
+    
+        .container {
+           
+            .box {
+                width: 40%;
+                height: 40vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 22%;
+                    width: 35%;
+                }
+            }
+        
+        }
+    }
+}
+
+
+@media (max-width: 550px) {
+    .cards {
+        h2 {
+            margin-left: 5vh;
+        }
+    
+        .container {
+            display: inline-block;
+            .box {
+                width: 90%;
+                height: 40vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 25%;
+
+                }
+
+                h2 {
+                    margin-top: 5vh;
+                }
+            }
+        
+        }
+    }
+}
+@media (max-width: 400px) {
+    .cards {
+       
+    
+        .container {
+            display: inline-block;
+            .box {
+                width: 90%;
+                height: 50vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 20%;
+                    width: 35%;
+
+                }
+                h2 {
+                    margin-top: 5vh;
+                }
+                img {
+                    margin-top: 0vh;
+                }
+
+            }
+        
+        }
+    }
+}
