--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -106,6 +106,7 @@
 
 @media (max-width: 768px) {
     .cards {
+        height: 150vh;
         h2 {
             margin-left: 10vh;
         }
@@ -130,6 +131,7 @@
 
 @media (max-width: 550px) {
     .cards {
+        height: 290vh;
         h2 {
             margin-left: 5vh;
         }
