--- a/src/componentes/folder/folder.scss
+++ b/src/componentes/folder/folder.scss
@@ -65,3 +65,85 @@
 
     }
 }
+
+
+@media (max-width: 1440px) {
+
+
+    .folder {
+
+
+        .container {
+            width: 90%;
+            margin-left: 5vh;
+            .col-8 {
+
+                .btn-secundary {
+                    width: 40%;
+                    margin-left: -10vh;
+                 }
+            }
+
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+
+    .folder {
+
+        width: 100%;
+        height: 50vh;
+
+        .container {
+            width: 90%;
+            margin-left: -32vh;
+            display: inline-block;
+
+            .col-8 {
+
+                .btn-secundary {
+                    width: 40%;
+                    margin-left: -10vh;
+                 }
+            }
+
+            .col-4 {
+                img {
+                    width: 0px;
+                    height: 0px;
+                }
+            }      
+        }
+    }
+}
+
+@media (max-width: 550px) {
+
+
+    .folder {
+
+        width: 100%;
+        height: 50vh;
+
+        .container {
+            width: 80%;
+            margin-left: -15vh;
+            display: inline-block;
+
+            .col-8 {
+
+                h2 {
+                    margin-top: 3vh;
+                    width: 90%;
+                }
+
+                .btn-secundary {
+                   width: 80%;
+                   margin-left: 3vh;
+                }
+            }
+        }
+    }
+}
