--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -56,6 +56,7 @@
             }
             h3 {
                 font-weight: 200;
+                line-height: 30px;
             }
         }
         .box:hover {
@@ -158,7 +159,7 @@
 }
 @media (max-width: 400px) {
     .cards {
-       
+       height: auto;
     
         .container {
             display: inline-block;
