--- a/src/componentes/clientes/clientes.scss
+++ b/src/componentes/clientes/clientes.scss
@@ -47,7 +47,7 @@
                     text-align: left;
                 }
             }
-
+         
             .imagem {
 
                 width: 100px;
@@ -69,6 +69,9 @@
 
     .clientes {
 
+        h2 {
+            margin-left: 8vh;
+        }
 
 
         .container {
