--- a/src/componentes/tratamentos/tratamentos.scss
+++ b/src/componentes/tratamentos/tratamentos.scss
@@ -4,7 +4,7 @@
 
     width: 100%;
     height: 70vh;
-    margin-top: 10vh;
+    margin-top: 5vh;
     
     h2 {
 
@@ -16,7 +16,7 @@
 
     .container {
         width: 80%;
-        height: 80%;
+        height: 100%;
         margin: auto;
         display: flex;
         flex-wrap: wrap;
@@ -27,12 +27,11 @@
         .box {
             width: 35%;
             height: 40%;
-
             padding: 15px;
             margin: auto;
 
             .fa-icon {
-                margin-top: 2vh;
+                margin-top: 2.5vh;
                 background-color: rgba(0, 0, 255, 0.247);
                 height: 2vh;
                 width: 3vh;
@@ -44,12 +43,15 @@
                 h3 {
                     margin-left: 1vh;
                     font-weight: bold;
+                    line-height: 35px;
                 }
             }
 
             h3 {
                 text-align: left;
                 font-weight: 300;
+                width: 100%;
+                line-height: 30px;
             }
         }
     }
@@ -99,6 +101,8 @@
 
 
     .tratamentos {
+        height: auto;
+        margin-top: 40vh;
         
         h2 {
             margin-left: 5vh;
