--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -8,12 +8,13 @@
     position: fixed;
     z-index: 997;
 
-    .container {
+    .container-nav {
 
         width: 90%;
         height: 90%;
         margin: auto;
         display: flex;
+
 
         .col-logo {
 
@@ -27,48 +28,58 @@
         }
         .nav {
 
-            width: 60%;
-            height: 100%;
-            display: flex;
-
-            .menu-mobile {
-                width: 0%;
-                height: 0%;
-                visibility: hidden;
-            }
-
-            ul {
-
+                width: 60%;
                 display: flex;
-                width: 65%;
-                align-items: flex-end;
-                margin-left: 30%;
-                border-right: 1px solid black;
+                border-right: 1px solid black ;
 
-                li {
+                .col-sm-nav {
 
-                    padding: 15px;
-                    margin-left: 15px;
-                    text-align: right;
-                    list-style: none;
-                    cursor: pointer;
-
+                    ul { 
+                        display: flex;
+                        width: 100%;
+                        margin-left: 60%;
+                        margin-top: 2vh;
+    
+                        justify-content: space-between;
+                        li {
+                            text-align: right;
+                            padding: 15px;
+                            border-radius: 15px;
+                            list-style: none;
+                            cursor: pointer;
+                        }
+                        li:hover {
+                            border: 1px solid black;
+                            transition: .4s ease-in-out;
+                        }
+                    }
                 }
-                li:hover {
-                    font-weight: bold;
-                    transition: .4s ease-in-out;
-                }
 
+                .col-mobile {
+
+                    visibility: hidden;
+
+                    .btn-x {
+                        visibility: hidden;
+                        width: 0px;
+                        height: 0px;
+
+                        img {
+                            width: 0px;
+                        }
+                    }
+                }
             }
         }
         .btn-agendar {
 
-            width: 10%;
+            width: 12%;
             height: 100%;
+            margin-left: 5vh;
 
             .btn {
                 width: 100%;
-                height: 60%;
+                height: 6vh;
                 cursor: pointer;
                 background-color: rgb(30, 111, 216);
                 color: white;
@@ -77,65 +88,103 @@
                 border-radius: 15px;
                 margin-top: 2vh;
 
+                img {
+                    width: 40px;
+                    position: absolute;
+                    margin-left: -5vh;
+                    margin-top: -1.5vh;
+                }
+
             }
+          
         }
-    }
 }
 
 @media (max-width: 768px) {
 
     .navbar {
-            background-color: black;
-            width: 80%;
-        .container {
+      
+            width: 100%;
+        .container-nav {
 
-            margin-left: -15vh;
+            
 
             .col-logo {
 
                 width: 35%;
 
-                
                 img {
                     width: 100%;
                     height: 100%;
+                    visibility: visible;
                 }
             }
             .nav {
-                width: 65%;
-
-                .menu-mobile {
-
-                    visibility: visible;
-                    width: 20%;
-                    height: 80%;
-                    margin-top: 2vh;
-                    margin-left: 75%;
-                    background-color: blue;
-                }
-                .container {
-                    position: fixed;
-                    width: 100%;
-                    height: 100vh;
-                    z-index: 9999999999999;
+                border: none;
+                .col-sm-nav {
+                    width: 0px;
+                    height: 0px;
                     visibility: hidden;
-                    background-color: rgba(36, 140, 209, 0.952);
+                }
+               
 
-                    ul {
-                        display: inline;
-                        margin: 0vh;
+                .col-mobile {
+                    width: 100px;
+                    height: 100px;
+                    position: absolute;
+                    margin-left: 50%;
+                    visibility: visible;
+                    
 
-                        li {
-                            width: 55%;
-                            color: black;
-                
-                            font-size: 25px;
-                            margin: 0vh;
-                            margin-top: 10vh;
-                            text-align: left;
+                    .btn-x {
+                        position: absolute;
+                        margin-left: -15vh;
+                        margin-top: 2.5vh;
+                        width: 30%;
+                        background-color: red;
+                        border: none;
+                        visibility: hidden;
+                        background-color: transparent;
+    
+                        img {
+                            width: 50px;
+    
+                        }
+                    }
+                    .menu {
+                        background-color: transparent;
+                        border: none;
+                        z-index: 9999;
+
+                        img {
+                            width: 70px;
+                            margin-top: 1.5vh;
+                            z-index: 9999;
+                        }
+                    }
+
+
+                    .col-sm-nav-mobile {
+                        visibility:collapse;
+                        position: absolute;
+                        width: 50vh;
+                        height: 100vh;
+                        margin-left: -35vh;
+                        margin-top: 2vh;
+                        background-color: rgba(14, 193, 224, 0.87);
+
+                        ul {
+                            li {
+                                list-style: none;
+                                font-size: 30px;
+                                margin-top: 10vh;
+                                text-align: left;
+                            }
                         }
                     }
                 }
+
+               
             }
             .btn-agendar {
                 width: 0%;
@@ -145,4 +194,36 @@
         }
         
     }
+}
+
+@media (max-width: 550px) {
+
+
+    @media (max-width: 768px) {
+
+        .navbar {
+        
+                width: 100%;
+            .container-nav {
+
+                .col-logo {
+
+                    width: 70%;
+
+                }
+                .nav {
+                    width: 40%;
+                    margin-left: 0vh;
+
+
+                    .menu {
+                        margin-left: -25vh;
+                    }
+
+                }
+                
+            }
+        }
+    }
+        
 }
