--- a/src/componentes/tratamentos/tratamentos.scss
+++ b/src/componentes/tratamentos/tratamentos.scss
@@ -63,6 +63,7 @@
 
     .tratamentos {
             margin-top: 10vh;
+            height: auto;
         
         h2 {
             margin-left: 10vh;
