--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -28,6 +28,7 @@
             padding: 15px;
             background-color: rgba(255, 255, 255, 0.664);
             border: .2px solid rgba(112, 109, 109, 0.274);
+            box-shadow: 0px 10px 25px rgba(55, 121, 215, 0.25);
             border-radius: 10px;
             cursor: pointer;
             margin: auto;
@@ -39,11 +40,11 @@
                 border-radius: 50%;
                 margin-left: 35%;
                 margin-top: 2vh;
-                background-color: rgb(147, 147, 192);
 
                 img {
                     margin-top: 2vh;
-                    width: 50px;
+                    width: 70px;
+                    height: 70px;
                 }
             }
 
@@ -61,7 +62,7 @@
         }
         .box:hover {
             transition: .2s ease-in-out;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            box-shadow: rgba(118, 118, 184, 0.25) 0px 13px 27px -5px, rgba(53, 51, 51, 0.3) 0px 8px 16px -8px;
         }
     }
 }
