--- a/src/componentes/clientes/clientes.scss
+++ b/src/componentes/clientes/clientes.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@500;600&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 .clientes {
 
@@ -34,6 +34,7 @@
                 font-size: 85px;
                 margin-top: 0vh;
                 margin-left: 2vh;
+                font-family: 'Catamaran';
             }
 
             .text {
