--- a/src/componentes/navbar/navbar.scss
+++ b/src/componentes/navbar/navbar.scss
@@ -4,9 +4,13 @@
 
     width: 100%;
     height: 10vh;
-    background-color: rgba(255, 255, 255, 0.89);
+    background-color: rgba(255, 255, 255, 0.952);
     position: fixed;
     z-index: 997;
+    background: #F2F5FA;
+    /* Shadow */
+
+    box-shadow: 0px 10px 25px rgba(55, 121, 215, 0.25);
 
     .container-nav {
 
@@ -18,38 +22,44 @@
 
         .col-logo {
 
-            width: 20%;
+            width: 40%;
             height: 100%;
+
             
             img {
-                width: 100%;
+                width: 200px;
                 height: 100%;
+                margin-left: 100px;
+                cursor: pointer;
             }
         }
         .nav {
 
-                width: 60%;
+                width: 40%;
+                height: 90%;
+                margin-top: 1vh;
                 display: flex;
-                border-right: 1px solid black ;
+                border-right: 1px solid rgba(0, 0, 0, 0.356) ;
 
                 .col-sm-nav {
 
                     ul { 
                         display: flex;
                         width: 100%;
-                        margin-left: 60%;
+                        margin-left: 0%;
                         margin-top: 2vh;
     
                         justify-content: space-between;
                         li {
                             text-align: right;
                             padding: 15px;
-                            border-radius: 15px;
+                            border-radius: 5px;
                             list-style: none;
                             cursor: pointer;
                         }
                         li:hover {
-                            border: 1px solid black;
+                            border: none;
+                            background-color: rgba(35, 123, 224, 0.479);
                             transition: .4s ease-in-out;
                         }
                     }
@@ -73,26 +83,33 @@
         }
         .btn-agendar {
 
-            width: 12%;
+            width: 10%;
             height: 100%;
             margin-left: 5vh;
 
             .btn {
-                width: 100%;
-                height: 6vh;
+                width: 150px;
+                height: 50px;
                 cursor: pointer;
                 background-color: rgb(30, 111, 216);
                 color: white;
                 font-weight: bold;
                 border: none;
-                border-radius: 15px;
+                border-radius: 3px;
                 margin-top: 2vh;
+                display: flex;
+
+                a {
+                    margin-top: 1.7vh;
+                    margin-left: 1vh;
+                    color: white;
+                    text-decoration: none;
+                }
 
                 img {
-                    width: 40px;
-                    position: absolute;
-                    margin-left: -5vh;
-                    margin-top: -1.5vh;
+                    width: 25px;
+                    margin-left: 1vh;
+                    margin-top: 1vh;
                 }
 
             }
