--- a/src/componentes/slider/slider.scss
+++ b/src/componentes/slider/slider.scss
@@ -3,17 +3,16 @@
 
     width: 100%;
     height: 70vh;
-
-    background-color: rgb(49, 48, 48);
     z-index: 9;
 
 
     .container {
-
+        margin-top: 100px;
         width: 100%;
-        height: 100%;
-        background-color: #cae2ee;
+        height: 600px;
+        background-color: #DAE9F2;
         display: flex;
+        position: absolute;
 
         .col-6 {
             color: black;
@@ -22,44 +21,83 @@
             text-align: left;
 
             .color-text {
-
                 background-color: #9cdaf1;
                 padding: 5px;
                 border: 10px;
             }
 
-            .btn-intro {
-                width: 23%;
-                height: 4.5vh;
-                border: none;
-                background-color: #26b6eb;
-                margin-left: 20vh;
-                color: white;
-                font-weight: bold;
-                cursor: pointer;
-            }
-            .btn-intro-secundary {
-                width: 23%;
-                height: 4.5vh;
-                border: .5px solid rgba(0, 0, 0, 0.233);
-                background-color: #bbdae9;
-                margin-left: 2vh;
-                color: #17ace2;
-                font-weight: bold;
-                cursor: pointer;
+            .btns {
+
+                width: 50%;
+                height: 10vh;
+                margin: auto;
+                margin-left: 26.5vh;
+                display: flex;
+
+                .btn-intro {
+                    width: 220.6px;
+                    height: 41px;
+                    font-family: 'Inter';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 18.4504px;
+                    line-height: 23px;
+                    /* identical to box height, or 124% */
+                    cursor: pointer;
+                    margin-top: 0vh;
+                    margin-left: 2vh;
+                    text-align: center;
+    
+                    /* BG */
+                    border: none;
+                    color: #F2F5FA;
+    
+                    
+                    background: linear-gradient(225deg, #2098E3 0%, #0C63DF 100%);
+                    border-radius: 3px;
+                }
+                .btn-intro-secundary {
+                    width: 220.6px;
+                    height: 41px;
+                    border: .5px solid rgba(0, 0, 0, 0.233);
+                    background-color: transparent;
+                    color: #0C63DF;
+                    font-weight: bold;
+                    cursor: pointer;
+                    font-weight: 600;
+                    font-size: 18.4504px;
+                    line-height: 23px;
+                    margin-left: 2vh;
+                }
+    
+
+
             }
 
+            
             h3 {
-                margin-left: 20%;
-                margin-top: 22%;
-                font-size: 30px;
-                font-weight: 200;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 28px;
+                line-height: 31px;
+                margin-left: 280px;
+                margin-top: 175px;
             }
             h2 {
-                font-size: 65px;
-                margin-left: 20%;
-                width: 75%;
-                margin-top: 1vh;
+                font-family: 'Inter';
+                font-style: normal;
+                font-weight: 700;
+                width: 550px;
+                margin-left: 280px;
+                margin-top: 0px;
+                font-size: 44px;
+                line-height: 49px;
+                /* or 112% */
+                
+                
+                /* Tipografia/Título */
+                
+                color: rgba(2, 14, 31, 0.85);
             }
 
             img {
@@ -78,10 +116,17 @@
         .container {
 
             .col-6 {
+              
+                .btns {
+                    margin-left: 12.5vh;
+                    width: 70%;
+                }
     
-                .btn-intro {
-                    margin-left: 17vh;
-
+                h3 {
+                    margin-left: 150px;
+                }
+                h2 {
+                    margin-left: 150px;
                 }
             }
         }
@@ -89,23 +134,55 @@
     
 }
 
-@media (max-width: 1024px) {
-
+@media (max-width: 1280px) and (max-height: 800px) {
     .slider {
 
         .container {
- 
+        
             .col-6 {
-                .btn-intro {
-                    margin-left: 5vh;
-                }
+
+        
+               
                 h3 {
-                    margin-left: 5vh;
-                    margin-top: 15vh;
+
+                    margin-left: 10vh;
+                    
                 }
                 h2 {
-                    margin-left: 5vh;
+                    margin-left: 10vh;
+                    width: 85%;
+                }
+                .btns {
+                    margin-left: 8vh;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .slider {
+        height: auto;
+        .container {
+            margin-left: 0vh;
+            position: relative;
+ 
+            .col-6 {
+
+                .btns {
+                    margin-left: 3vh;
                     width: 80%;
+                }
+               
+                h3 {
+
+                    margin-left: 50px;
+                    
+                }
+                h2 {
+                    margin-left: 50px;
+                    width: 85%;
                 }
             }
         }
@@ -115,40 +192,60 @@
 
 @media (max-width: 768px) {
     .slider {
-        height: auto;
+        width: 100%;
+
 
         .container {
             width: 100%;
-            margin-left: 0vh;
             display: inline-block;
 
             .col-6 {
                 width: 100%;
+                height: 35vh;
                 margin-bottom: 5vh;
+                margin-left: 0vh;
+                margin-top: 0vh;
 
                 h3 {
-                    margin-top: 10vh;
-
+                    margin-left: 5vh;
+                    margin-top: 15vh;
                 }
+                h2 {
+                    margin-left: 5vh;
+                }
+               
             }
         }
     }
 }
 
 @media (max-width: 550px) {
-
     .slider {
-        height: auto;
+        width: 100%;
+
 
         .container {
-            width: 100%;
-            margin-left: 0vh;
-            display: inline-block;
+           height: auto;
 
             .col-6 {
-                width: 100%;
-                margin-bottom: 5vh;
-               
+                height: auto;
+            
+                h3 {
+                    margin-left: 2vh;
+                    margin-top: 15vh;
+                }
+                h2 {
+                    margin-left: 2vh;
+                }
+                .btns {
+                    display: inline-block;
+                    margin-left: 0vh;
+
+                    .btn-intro-secundary {
+                        margin-top: 2vh;
+                    }
+        
+                }
             }
         }
     }
