refactor: correcao responsivo

--- a/src/componentes/duvidas/duvidas.scss
+++ b/src/componentes/duvidas/duvidas.scss
@@ -129,6 +129,7 @@
 
         .col-6 {
 
+
         
 
             h2 {
@@ -136,6 +137,7 @@
             }
             h3 {
                 margin-left: 5vh;
+                line-height: 35px;
             }
         
             .card-box-tras {
@@ -194,6 +196,7 @@
 
 
                 .acordion {
+                    width: 100%;
                     .ac {
                         width: 100%;
                         margin-left: 0vh;
@@ -235,10 +238,10 @@
                 }
                 h2 {
 
-                    margin-left: 10vh;
+                    margin-left: 2vh;
                 }
                 h3 {
-                  margin-left: 10vh;
+                  margin-left: 2vh;
                   width: 100%;
                 }
 
