--- a/src/componentes/cards/cards.scss
+++ b/src/componentes/cards/cards.scss
@@ -62,7 +62,7 @@
         }
         .box:hover {
             transition: .2s ease-in-out;
-            box-shadow: rgba(118, 118, 184, 0.25) 0px 13px 27px -5px, rgba(53, 51, 51, 0.3) 0px 8px 16px -8px;
+            box-shadow: rgba(8, 99, 173, 0.623) 0px 13px 27px -5px, rgba(53, 51, 51, 0.3) 0px 8px 16px -8px;
         }
     }
 }
@@ -94,6 +94,71 @@
            
             .box {
                 height: 40vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 22%;
+                    width: 35%;
+                }
+            }
+        
+        }
+    }
+}
+
+@media (max-width: 912px) and (max-height: 1368px) {
+    .cards {
+        height: 150vh;
+        h2 {
+            margin-left: 10vh;
+        }
+    
+        .container {
+           
+            .box {
+                width: 44%;
+                height: 30vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 22%;
+                    width: 35%;
+                }
+            }
+        
+        }
+    }
+}
+
+@media (max-width: 1024px) and (max-height: 600px) {
+    .cards {
+        height: auto;
+        .container {
+            height: auto;
+           
+            .box {
+                width: 27%;
+                height: 75vh;
+                margin-top: 3vh;
+
+                .circle {
+                    height: 22%;
+                    width: 35%;
+                }
+            }
+        
+        }
+    }
+}
+@media (max-width: 1280px) and (max-height: 800px) {
+    .cards {
+        height: auto;
+        .container {
+            height: auto;
+           
+            .box {
+                width: 27%;
+                height: 45vh;
                 margin-top: 3vh;
 
                 .circle {
@@ -180,6 +245,22 @@
                 img {
                     margin-top: 0vh;
                 }
+
+            }
+        
+        }
+    }
+}
+@media (max-width: 300px) {
+    .cards {
+       height: auto;
+    
+        .container {
+            display: inline-block;
+            .box {
+                width: 90%;
+                height: auto;
+                margin-top: 3vh;
 
             }
         
