--- a/src/componentes/folder/folder.scss
+++ b/src/componentes/folder/folder.scss
@@ -114,14 +114,32 @@
 
                 .btn-secundary {
                     width: 40%;
-                    margin-left: -10vh;
+                    margin-left: 15vh;
                  }
             }
 
         }
     }
 }
+@media (max-width: 1024px) {
 
+
+    .folder {
+
+
+        .container {
+          
+            .col-8 {
+
+                .btn-secundary {
+             
+                    margin-left: 10vh;
+                 }
+            }
+
+        }
+    }
+}
 @media (max-width: 768px) {
 
 
@@ -131,16 +149,20 @@
         height: 50vh;
 
         .container {
-            width: 90%;
-            margin-left: -32vh;
+            width: 80%;
+            margin: auto;
+            position: relative;
             display: inline-block;
 
             .col-8 {
 
                 .btn-secundary {
-                    width: 40%;
-                    margin-left: -10vh;
+                    width: 50%;
+                    margin-left: 7vh;
                  }
+                 h2 {
+                    margin-top: 4vh;
+                }
             }
 
             .col-4 {
@@ -159,11 +181,11 @@
     .folder {
 
         width: 100%;
-        height: 50vh;
+        height: auto;
 
         .container {
-            width: 80%;
-            margin-left: -15vh;
+            width: 90%;
+            height: auto;
             display: inline-block;
 
             .col-8 {
@@ -172,10 +194,13 @@
                     margin-top: 3vh;
                     width: 90%;
                 }
+                h3 {
+                    width: 100%;
+                }
 
                 .btn-secundary {
-                   width: 80%;
-                   margin-left: 3vh;
+                   width: 90%;
+                   margin-left: 4vh;
                 }
             }
         }
