--- a/src/componentes/footer/footer.scss
+++ b/src/componentes/footer/footer.scss
@@ -101,3 +101,60 @@
         }
     }
 }
+
+
+@media (max-width: 1024px) {
+
+    .footer {
+        margin-top: 20vh;
+        
+        .container {
+         
+            width: 100%;
+            .col-sm {
+                width: 100%;
+
+                img {
+                    width: 150px;
+                  
+                }
+            }
+            
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .footer {
+        height: auto;
+        
+        .container {
+         
+            width: 100%;
+            display: inline-block;
+            .col-sm {
+                width: 100%;
+                height: 15vh;
+                margin-top: 0vh;
+
+                img {
+                    width: 150px;
+                    margin-top: 3vh;
+                  
+                }
+                h2 {
+                    margin-top: 0vh;
+                    margin-left: 0vh;
+                    text-align: left;
+                }
+                h3 {
+                    margin-top: 0vh;
+                    margin-left: 6vh;
+                    text-align: left;
+                }
+            }
+            
+        }
+    }
+}
