--- a/src/componentes/time/time.scss
+++ b/src/componentes/time/time.scss
@@ -48,16 +48,15 @@
                     margin-left: -115px;
                     margin-top: 2vh;
                     position: absolute;
-                    z-index: 99;
+                    z-index: 9;
                 }
             }
             .nome {
-                width: 272px;
-                position: absolute;
+                width: 100%;
                 height: 170px;
                 margin-top: 300px;
-                margin-left: -13.95vh;
                 background-color: white;
+                position: relative;
                 border-radius: 5px;
                 display: inline-block;
                 z-index: 99999;
@@ -95,6 +94,7 @@
 @media (max-width: 768px) {
 
     .time {
+        height: auto;
         margin-top: 40vh;
 
         h2 {
@@ -109,41 +109,39 @@
     
 }
 
-@media (max-width: 550px) {
 
+@media (max-width:550px) {
     .time {
-        margin-top: 20vh;
-
-        h2 {
-            margin-left: 5vh;
-        }
-        h3 {
-            margin-left: 5vh;
-            width: 80%;
-        }
+        height: auto;
         .container {
+            margin-bottom: 10vh;
+    
             .box {
+                width: 90%;
+                height: 370px;
+                margin-left: 5vh;
+                display: inline-block;
+                background-color: rgba(20, 189, 211, 0.432);
+                border-radius: 20px;
+                cursor: pointer;
+
                 .imagem {
+                    width: 100%;
                     img {
-                        width: 200px;
+                        position: relative;
+                        margin-top: 7vh;
+                        width: 150px;
                         margin-left: 0vh;
                     }
                 }
                 .nome {
-                    margin-top: -1vh;
-                    height: 15vh;
-                    h2 {
-                        font-size: 15px;
-                    }
-                    h3 {
-                        font-size: 12px;
-                    }
+                    margin-top: -4%;
                 }
+
                 
+            
             }
+        
         }
-        
-        
     }
-    
 }
