--- a/src/componentes/header/header.scss
+++ b/src/componentes/header/header.scss
@@ -114,7 +114,7 @@
     .slider {
 
         .container {
-
+            margin-top: 70px;
             .col-6 {
               
                 .btns {
@@ -167,8 +167,10 @@
         .container {
             margin-left: 0vh;
             position: relative;
+            height: 70vh;
  
             .col-6 {
+                height: 100%;
 
                 .btns {
                     margin-left: 3vh;
@@ -176,7 +178,7 @@
                 }
                
                 h3 {
-
+                    margin-top: 15vh;
                     margin-left: 50px;
                     
                 }
@@ -201,7 +203,7 @@
 
             .col-6 {
                 width: 100%;
-                height: 35vh;
+                height: 45vh;
                 margin-bottom: 5vh;
                 margin-left: 0vh;
                 margin-top: 0vh;
@@ -228,7 +230,7 @@
            height: auto;
 
             .col-6 {
-                height: auto;
+                height: 100%;
             
                 h3 {
                     margin-left: 2vh;
